--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" content="Short information about Michał Jagoda">
   <title>Michał's Personal Page</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="Michał.png" alt="Michał's photo" width="100" height="100"></td>
+      <td><img src="images/Michał.png" alt="Michał's photo" width="100" height="100"></td>
       <td>
         <h1>Michał Jagoda</h1>
         <p><em>Informatics student</em></p>
@@ -17,7 +19,7 @@
       </td>
     </tr>
   </table>
-  <hr size="2">
+  <hr>
   <h3>Education</h3>
   <ul>
     <li>Primary school no. 9 in Gliwice</li>
@@ -25,10 +27,10 @@
     <li>High school no. 5 in Gliwice</li>
     <li>Silesian Univeristy of Technology</li>
     <li>I and II degree music school in Gliwice</li>
-    <li>CEA certificate</li>
+    <li>CAE certificate</li>
 
   </ul>
-  <hr siz="2">
+  <hr>
   <h3>Hobbies</h3>
   <ol type="I">
     <li><a href="https://www.youtube.com/watch?v=hbpR2kE9Yv8&ab_channel=TomekGrabowski">Piano</a></li>
@@ -36,9 +38,9 @@
     <li><a href="https://www.youtube.com/watch?v=msn0zfdEk58&ab_channel=WorldTableTennis">Table Tennis</a></li>
   </ol>
 
-  <hr size="2">
+  <hr>
   <a href="contactMe.html">link to contact information</a>
-  <hr size="2">
+  <hr>
   <h3>Work Experiance</h3>
   <table cellspacing="10">
     <thead>
@@ -56,12 +58,12 @@
       </tr>
     </tbody>
   </table>
-  <hr size="2">
+  <hr>
   <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
       <td>C++</td>
-      <td>⭐⭐⭐✩✩</td>
+      <td>⭐⭐✩✩✩</td>
     </tr>
     <tr>
       <td>Web Developmnet</td>
@@ -76,7 +78,6 @@
       <td>⭐⭐⭐⭐✩</td>
     </tr>
   </table>
-
 
 </body>
 
